styles.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap');

body {
    font-family: 'Inter', sans-serif;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: 100vh;
    margin: 0;
    margin-top: 50px;
    text-align: left;
}

header, section {
    margin: 20px 0;
}

img {
    border-radius: 50%;
}

.container {
    max-width: 800px;
    padding: 20px;
    box-sizing: border-box;
}

.profile-header {
    display: flex;
    align-items: center; 
    justify-content: center;
    margin-bottom: 40px; 
}

.profile-info {
    display: flex;
    flex-direction: column; 
    align-items: flex-start; 
    margin-top: 10px;
}

.profile-pic {
    width: 165px;
    height: 165px;
    margin-right: 30px;
    transition: transform 0.4s ease; 
    border-radius: 0; 
}

.profile-pic:hover {
    transform: scale(1.1); 
}

#socials {
    display: flex; 
    justify-content: center; 
}

#socials img {
    width: 25px;
    height: 25px;
    border-radius: 0;
    margin: 0 5px; 
}

#socials img:hover {
    transform: scale(1.17); 
    transition: transform 0.2s ease;
}

.section-header {
    font-size: 1.3em;
    font-weight: bold;
    margin-top: 30px;
    margin-bottom: 7px;
}

.projects-container {
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
}

.projects {
    width: 35%; 
}

.project-explanations {
    width: 65%; 
    padding-left: 10px;
    border-left: none;
}

.indent-text, .project-explanations p {
    margin: 0;
}

.indent-text {
    padding-left: 20px;
}

.indent-text .text {
    margin-left: 8px; 
}

a {
    color: #000;
    text-decoration: italic;
}

a:hover {
    color: #9a7f6c;
    text-decoration: underline;
    text-decoration-style: wavy;
    font-style: italic;
}

.spacer {
    display: block;
    height: 10px; 
}

